--- a/dungeon_adventure.ipynb
+++ b/dungeon_adventure.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eee84ad5",
    "metadata": {},
    "outputs": [],
@@ -34,6 +34,35 @@
     "# Prompt the player for their name.\n",
     "# Set health to 10.\n",
     "# Create an empty list to store their inventory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2fd3bad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Dungeon Quest!  Find treasure and escape traps through 5 dungeon rooms to win!\n",
+      "Enter your player name:\n",
+      "Hello, Julie! Good luck on your quest!\n",
+      "Your health starts at 10.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Welcome to Dungeon Quest!  Find treasure and escape traps through 5 dungeon rooms to win!\")\n",
+    "print(\"Enter your player name:\")\n",
+    "player_name = input()\n",
+    "print()\n",
+    "print(f\"Hello,\", player_name + \"!\", \"Good luck on your quest!\")\n",
+    "print(\"Your health starts at 10.\")\n",
+    "player_health = 10 #Initial Health Status\n",
+    "player_inventory = []\n",
+    "print()"
    ]
   },
   {
@@ -51,6 +80,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eb0d1c8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Treaure Dictionary\n",
+    "treasures = {\n",
+    "    'plate': 5,\n",
+    "    'goblet': 10,\n",
+    "    'vase': 20,\n",
+    "    'book': 35,\n",
+    "    'helmet': 50,\n",
+    "    'sword': 60,\n",
+    "    'sheild': 75,\n",
+    "    'necklace': 100\n",
+    "}\n",
+    "\n",
+    "#Traps Dictionary\n",
+    "traps = {\n",
+    "    'arrows': 2,\n",
+    "    'monster': 2,\n",
+    "    'rockslide': 2,\n",
+    "    'acidic fog': 2,\n",
+    "    'snare': 2\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1a24ddaf",
    "metadata": {},
    "outputs": [],
@@ -62,7 +120,88 @@
     "# 2. Move to next room\n",
     "# 3. Check health and inventory\n",
     "# 4. Quit the game\n",
-    "# Make sure to handle each option appropriately.\n",
+    "# Make sure to handle each option appropriately."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8853ef5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#game play  \n",
+    "import random\n",
+    "dungeon_room = 1\n",
+    "max_rooms = 5\n",
+    "while dungeon_room <= max_rooms and player_health > 0:\n",
+    "    print()\n",
+    "    print('You have entered room:', dungeon_room)\n",
+    "    print('What would you like to do?')\n",
+    "    print('1. Search for treasure.')\n",
+    "    print('2. Move to the next room.')\n",
+    "    print('3. Check health and inventory.')\n",
+    "    print('4. Quit the game.')\n",
+    "    player_choice = input('Enter: 1, 2, 3, or 4: ')\n",
+    "    print()\n",
+    "#player choice\n",
+    "    if player_choice == '1':\n",
+    "        outcome = random.choice(['treasure', 'trap'])\n",
+    "        if outcome == 'trap':\n",
+    "            trap = random.choice(list(traps.keys()))\n",
+    "            player_health -= 2\n",
+    "            print('You encountered:', trap + '!')\n",
+    "            print('You lost 2 health points!')\n",
+    "            print()\n",
+    "        elif outcome == 'treasure':\n",
+    "            treasure = random.choice(list(treasures.keys()))\n",
+    "            player_inventory.append(treasure)\n",
+    "            print('You found ' + treasure + '!')\n",
+    "            print('It is worth ' + str(treasures[treasure]) + ' points!')\n",
+    "            player_points += (treasures[treasure])\n",
+    "            print()\n",
+    "    elif player_choice == '2':\n",
+    "        dungeon_room += 1\n",
+    "        if dungeon_room > max_rooms:\n",
+    "            print('You have completed all rooms! You won!')\n",
+    "            print(\"Final player stats:\")\n",
+    "            print(\"Health:\", player_health)\n",
+    "            print(f\"Inventory: {\", \".join(items for items in player_inventory)}\")\n",
+    "            print(\"Points:\", player_points)\n",
+    "            print()\n",
+    "            break\n",
+    "    elif player_choice == '3':\n",
+    "        print('Current player stats:')\n",
+    "        print(\"Health:\", player_health)\n",
+    "        print(f\"Inventory: {\", \".join(items for items in player_inventory)}\")\n",
+    "        print(\"Points:\", player_points)\n",
+    "        print()\n",
+    "    elif player_choice == '4':\n",
+    "        print('Thank you for playing!')\n",
+    "        print(\"Final player stats:\")\n",
+    "        print(\"Health:\", player_health)\n",
+    "        print(f\"Inventory: {\", \".join(items for items in player_inventory)}\")\n",
+    "        print(\"Points:\", player_points)\n",
+    "        break\n",
+    "    else:\n",
+    "        print('Please enter a choice of 1 - 4.')\n",
+    "if player_health == 0:\n",
+    "    print('You ran out of health! Game Over!')\n",
+    "    print(\"Final player stats:\")\n",
+    "    print(\"Health:\", player_health)\n",
+    "    print(f\"Inventory: {\", \".join(items for items in player_inventory)}\")\n",
+    "    print(\"Points:\", player_points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d23eae5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "\n",
     "# Step 4: Implement treasure search\n",
@@ -96,7 +235,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
